--- a/src/app/goal-details/goal-details.component.html
+++ b/src/app/goal-details/goal-details.component.html
@@ -1,2 +1,3 @@
 <p>{{goal.description}}</p>
+<button (click)= 'goalComplete(true)'>Complete</button>
 <p>This goal will be complete in <strong>{{goal.completeDate|dateCount}} days</strong> </p>
